--- a/jessica/style.css
+++ b/jessica/style.css
@@ -8,382 +8,386 @@ Author URI: http://www.rubytechnology.co.uk
 /* CSS Document */
 
 body {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	color: #333333;
-	background-color: #000033;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  color: #333333;
+  background-color: #000033;
 }
 h1 {
-	font-size: 16px;
-	font-weight: bold;
-	color: #000033;
-	margin: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 5px;
-	padding-left: 0px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #000033;
+  margin: 0px;
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 5px;
+  padding-left: 0px;
 }
 h1 a{
-	
-	text-decoration: none;
+  text-decoration: none;
 }
-
 
 .quoteText h2 {
-	font-size: 18px;
-	color: #FFFFFF;
-	padding-right: 20px;
-	padding-left: 20px;
-	font-weight: normal;
-	margin: 0px;
-	padding-top: 0px;
-	padding-bottom: 0px;
+  font-size: 18px;
+  color: #FFFFFF;
+  padding-right: 20px;
+  padding-left: 20px;
+  font-weight: normal;
+  margin: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 h3 {
-	font-size: 13px;
-	color: #000033;
-	margin: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 10px;
-	padding-left: 0px;
+  font-size: 13px;
+  color: #000033;
+  margin: 0px;
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 10px;
+  padding-left: 0px;
 }
 h4 {
-	font-size: 15px;
-	color: #000033;
-	padding-top: 10px;
-	padding-bottom: 5px;
-	margin: 0px;
+  font-size: 15px;
+  color: #000033;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  margin: 0px;
 }
 p {
-	font-size: 11px;
-	color: #333333;
-	margin: 0px;
-	padding-top: 5px;
-	padding-right: 0px;
-	padding-bottom: 5px;
-	padding-left: 0px;
-	line-height: 16px;
+  font-size: 11px;
+  color: #333333;
+  margin: 0px;
+  padding-top: 5px;
+  padding-right: 0px;
+  padding-bottom: 5px;
+  padding-left: 0px;
+  line-height: 16px;
 }
 a:link {
-	color: #000033;
+  color: #000033;
 }
 a:visited {
-	color: #000033;
+  color: #000033;
 }
 img
 {  border-style: none;
 }
 .page {
-	width: 900px;
-	margin-right: auto;
-	margin-left: auto;
-	background-color: #FFFFFF;
+  width: 900px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #FFFFFF;
 }
 /* Header */
 .header {
-	margin-right: 30px;
-	margin-left: 30px;
-	padding-top: 20px;
-	height: 110px;
+  margin-right: 30px;
+  margin-left: 30px;
+  padding-top: 20px;
+  height: 110px;
 }
 .logo {
-	float: left;
-	width: 200px;
-	padding-bottom: 10px;
+  float: left;
+  width: 200px;
+  padding-bottom: 10px;
 }
 #navcontainer {
-	padding: 0;
-	height: 25px;
-    width:555px;
-	float: right;
-	margin-top: 40px;
-	margin-right: 0;
-	margin-bottom: 0;
-	margin-left: 0;
+  padding: 0;
+  height: 25px;
+  width:555px;
+  float: right;
+  margin-top: 40px;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
 }
 
 #navcontainer ul {
-	border: 0;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	text-align: center;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
 }
 
 #navcontainer ul li {
-    display: block;
-    float: left;
-    text-align: center;
-    padding-left: 8px;
-    margin: 0;
+  display: block;
+  float: left;
+  text-align: center;
+  padding-left: 8px;
+  margin: 0;
 }
 
 #navcontainer ul li a {
-	width: 90px;
-	height: 25px;
-	color: #000033;
-	text-decoration: none;
-	display: block;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	font-style: normal;
-	line-height: 23px;
-	font-weight: normal;
-	font-variant: normal;
-	margin-top: 0;
-	margin-right: 0;
-	margin-left: 0;
-	border-top-width: 1px;
-	border-right-width: 1px;
-	border-right-style: solid;
-	border-right-color: #FFFFFF;
-	background-repeat: no-repeat;
-    padding-left:15px;
-    padding-right:10px;
-    width:auto;
-	background-position: 1px;
+  width: 90px;
+  height: 25px;
+  color: #000033;
+  text-decoration: none;
+  display: block;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 23px;
+  font-weight: normal;
+  font-variant: normal;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
+  border-top-width: 1px;
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-right-color: #FFFFFF;
+  background-repeat: no-repeat;
+  padding-left:15px;
+  padding-right:10px;
+  width:auto;
+  background-position: 1px;
 }
 
 #navcontainer ul .page-item-5 a {
-	background-image: url(images/home.gif);
+  background-image: url(images/home.gif);
 } /* home */
 
 #navcontainer ul .page-item-6 a {
-	background-image: url(images/about.gif);
+  background-image: url(images/about.gif);
 } /* about */
 
 #navcontainer ul .page-item-2 a {
-	background-image: url(images/coaching.gif);
+  background-image: url(images/coaching.gif);
 } /* coaching */
 
 #navcontainer ul .page-item-12 a {
-	background-image: url(images/news.gif);
+  background-image: url(images/news.gif);
 } /* news */ 
 
 #navcontainer ul .page-item-24 a {
-	background-image: url(images/blog.gif);
+  background-image: url(images/blog.gif);
 } /* blog */
 
 #navcontainer ul .page-item-21 a {
-	background-image: url(images/testimonials.gif);
+  background-image: url(images/testimonials.gif);
 } /* clients */
 
 #navcontainer ul .page-item-8 a {
-	background-image: url(images/contact.gif);
+  background-image: url(images/contact.gif);
 } /* contact */
 
 #navcontainer ul li a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 } 
 
 .mainContent {
-	width: 900px;
-	float: left;
-	background-color: #FFFFFF;
+  width: 900px;
+  float: left;
+  background-color: #FFFFFF;
 }
 .photo {
-	float: left;
-	width: 560px;
-	margin-left: 30px;
+  float: left;
+  width: 560px;
+  margin-left: 30px;
 }
 .quote {
-	float: right;
-	width: 250px;
-	margin-right: 30px;
-	background-image: url(images/gradient_quote.jpg);
-	background-repeat: no-repeat;
-	height: 263px;
+  float: right;
+  width: 250px;
+  margin-right: 30px;
+  background-image: url(images/gradient_quote.jpg);
+  background-repeat: no-repeat;
+  height: 263px;
 }
 .quoteText {
-	margin: 0px;
-	padding-right: 0px;
-	padding-left: 0px;
+  margin: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 .quote p {
-	color: #FFFFFF;
-	margin: 0px;
+  color: #FFFFFF;
+  margin: 0px;
 
 }
 .quotesTop {
-	float: left;
-	width: 250px;
-	padding-left: 20px;
-	padding-top: 20px;
-	padding-bottom: 10px;
+  float: left;
+  width: 250px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 .quoteBottom {
-	float: right;
-	width: 46px;
-	margin-right: 20px;
+  float: right;
+  width: 46px;
+  margin-right: 20px;
 }
 
 .testimonialText a {
-	
-	text-decoration: none;
+
+  text-decoration: none;
 }
 
 
 
 .text {
-	float: left;
-	width: 550px;
-	margin-left: 30px;
-	margin-top: 20px;
+  float: left;
+  width: 550px;
+  margin-left: 30px;
+  margin-top: 20px;
 }
 .text img {
-	float: left;
-	padding-top: 10px;
-	padding-bottom: 6px;
-	padding-left: 0px;
-	padding-right: 15px;
+  float: left;
+  padding-top: 10px;
+  padding-bottom: 6px;
+  padding-left: 0px;
+  padding-right: 15px;
 }
 
 .testimonial {
-	float: right;
-	width: 250px;
-	margin-right: 30px;
-	margin-top: 20px;
+  float: right;
+  width: 250px;
+  margin-right: 30px;
+  margin-top: 20px;
 }
 
 .clients {
-	width: 120px;
-	margin: 0px;
-	padding: 0px;
-	float: left;
-	height: 26px;
+  width: 120px;
+  margin: 0px;
+  padding: 0px;
+  float: left;
+  height: 26px;
 }
 .clientsHeader {
-	float: right;
-	width: 128px;
-	height: 26px;
+  float: right;
+  width: 128px;
+  height: 26px;
 }
 .testimonialText {
-   font-size:11px;
-   font-weight: bold;
-	line-height: 14px;
-	margin: 0px;
-	padding: 0px;
-	color: #000033;
+  font-size:11px;
+  font-weight: bold;
+  line-height: 14px;
+  margin: 0px;
+  padding: 0px;
+  color: #000033;
 }
 
 .italics {
-	font-style: italic;
-	margin-top: 5px;
+  font-style: italic;
+  margin-top: 5px;
 }
 .author  {
-	font-style: italic;
-	margin: 0px;
-	padding-top: 3px;
-	color: #000033;
+  font-style: italic;
+  margin: 0px;
+  padding-top: 3px;
+  color: #000033;
 }
 blockquote {
-	margin: 0px;
-	padding: 0px;
-	font-weight: bold;
-	color: #000033;
+  margin: 0px;
+  padding: 0px;
+  font-weight: bold;
+  color: #000033;
 }
 
 
 .footer {
-	float: left;
-	width: 870px;
-	margin-top: 30px;
-	padding-left: 30px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+  float: left;
+  width: 870px;
+  margin-top: 30px;
+  padding-left: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .testimonials {
-	list-style-type: none;
-	font-size: 11px;
-	margin: 0px;
-	padding: 0px;
-	color: #333333;
-	padding-top:10px;
-	line-height:16px;
+  list-style-type: none;
+  font-size: 11px;
+  margin: 0px;
+  padding: 0px;
+  color: #333333;
+  padding-top:10px;
+  line-height:16px;
 }
 
 
 
 .footer a {
-	color: #000033;
+  color: #000033;
 }
 .footer a:visited {
-	color: #000033;
+  color: #000033;
 }
 /* Sidebar section */
 .blogSidebar, 
 
 .blogSidebar h2 {
-	color: #000033;
-	margin:0px;
-	padding:0px;
-	font-size: 13px;
-	font-weight: bold;
-	padding-bottom:10px;
-	list-style-position:outside;
-	
+  color: #000033;
+  margin:0px;
+  padding:0px;
+  font-size: 13px;
+  font-weight: bold;
+  padding-bottom:10px;
+  list-style-position:outside;
+
 }
 
 .blogSidebar ul {
-	margin: 0px;
-	padding: 0px;
-	
+  margin: 0px;
+  padding: 0px;
+
 }
 
 .blogSidebar li {
-	list-style-type: none;
-	font-weight: normal;
-	margin: 0px;
-	padding-bottom: 5px;
-	padding-top: 5px;
+  list-style-type: none;
+  font-weight: normal;
+  margin: 0px;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 .blogSidebar li a {
-	
-	margin: 0px;
-	padding-bottom: 10px;
+
+  margin: 0px;
+  padding-bottom: 10px;
 }
 h2.widgettitle {
-	margin:0px; 
-	padding:0px;
-	
+  margin:0px; 
+  padding:0px;
+
 }
 
 #searchform {
-font-size:11px;
-padding-top:10px;
-padding-bottom:10px;}
+  font-size:11px;
+  padding-top:10px;
+  padding-bottom:10px;}
 
 #searchsubmit {
-font-size:11px;
+  font-size:11px;
 
-margin-left:70px;
-margin-top:10px;}
+  margin-left:70px;
+  margin-top:10px;}
 
 .avatar {
-    width: auto;
-	margin-left:0px;
-	margin-bottom:0px; 
+  width: auto;
+  margin-left:0px;
+  margin-bottom:0px; 
 }
 
 ol.commentlist {
-	padding:0px;
-	list-style-type: none;
-	font-size: 11px;
+  padding:0px;
+  list-style-type: none;
+  font-size: 11px;
 }
 
-	
-	.twitter img {
-		float: left;
-	}
-
-.twitter span {
-	float: left;
-	font-size: 11px;
-	font-weight: bold;
-	padding-top: 9px;
-	padding-right: 5px;
-	padding-bottom: 5px;
-	padding-left: 5px;
+.social iframe {
+  width: 50px;
+  float: left;
+  margin: 6px;
 }
+.social img {
+  float: left;
+  margin: 0 3px 0 0;
+}
+
+.social span {
+  float: left;
+  font-size: 11px;
+  font-weight: bold;
+  padding-top: 9px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+
